--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -24,7 +24,17 @@
 
   .quantity {
     padding-left: 20px;
+    display: flex;
+
+    .value {
+      margin: 0 10px;
+    }
+
+    .arrow{
+      cursor: pointer;
+    }
   }
+
 
   .remove-button {
     padding-left: 12px;
