--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,4 +28,13 @@
     margin-left: auto;
     font-size: 36px;
   }
+  .test-warning {
+    font-size: 24px;
+    color: red;
+    margin-top: 150px;
+    button {
+      margin-left: auto;
+      margin-top: 50px;
+    }
+  }
 }
